ecmascript/parser/tests/typescript-errors/tsc/es6/functionPropertyAssignments/FunctionPropertyAssignments3_es6/input.ts.stderr
error: Unexpected token `{`. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/typescript-errors/tsc/es6/functionPropertyAssignments/FunctionPropertyAssignments3_es6/input.ts:2:12
  |
2 | var v = { *{ } }
  |            ^

error[1005]: Expected '('
 --> $DIR/tests/typescript-errors/tsc/es6/functionPropertyAssignments/FunctionPropertyAssignments3_es6/input.ts:2:12
  |
2 | var v = { *{ } }
  |            ^

